--- a/RentMyWrox/RentMyWrox.csproj
+++ b/RentMyWrox/RentMyWrox.csproj
@@ -261,6 +261,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\web.config" />
     <Content Include="Views\UserDemographics\Index.cshtml" />
+    <Content Include="Views\UserDemographics\Manage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
