--- a/RentMyWrox/RentMyWrox.csproj
+++ b/RentMyWrox/RentMyWrox.csproj
@@ -485,6 +485,9 @@
     <Compile Include="WebForms.Master.designer.cs">
       <DependentUpon>WebForms.Master</DependentUpon>
     </Compile>
+    <Compile Include="WebFormsBaseClass.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
